# AutoMLEnv

./: .gitignore  Dockerfile  README.md  environment.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  validate.py
server/: app.py
