[project]
name = "automlenv"
version = "1.0.0"
description = "AutoMLEnv ML pipeline debugging environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0",
    "requests",
    "openai",
    "pydantic"
]

[project.scripts]
server = "server.app:main"